# analysis-project-generator

./: .gitignore  Dockerfile  README.md  app.py  generator.py  gitlab_utils.py  main.py  pyproject.toml  requirements.txt  start.bat  utils.py
.github/workflows/: deploy.yml
app/: generator.py  main.py
app/utils/: copier.py  generator.py  gitlab_service.py  gitlab_utils.py  study_data.py  supabase_service.py
